# instinct-and-soul

./: .gitignore  DESIGN.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  harness.py  pyproject.toml  spine.py
creatures/cores3/: character.md  main.py  recipes.py  seed_soul.md  system_prompt.md
creatures/dancer/: character.md  main.py  seed_instinct.py  seed_soul.md  system_prompt.md  tune.py
creatures/m5sticks3/: example_main.py  find_network.py  main.py  recipes.py  seed_instinct.py  seed_soul.md  system_prompt.md  tune.py
creatures/touchy-pebble/: main.py  recipes.py  seed_instinct.py  seed_soul.md  system_prompt.md  test_motors.py  tune.py
test/: first_prompt.txt  test_llm_communication.py  test_spine.py
test/CORES3/: API.md
test/CORES3/demo_shake_sound/: main.py
test/CORES3/test_grove_vibration/: main.py
test/CORES3/test_imu/: main.py
test/CORES3/test_proximity/: main.py
test/CORES3/test_speaker/: main.py
test/STICKS3/: API.md
test/STICKS3/demo_shake_sound/: main.py
test/STICKS3/test_imu/: main.py
test/STICKS3/test_speaker/: main.py
